Change log format

--- a/src/MakePdf.Wpf/NLog.config
+++ b/src/MakePdf.Wpf/NLog.config
@@ -6,7 +6,7 @@
     <target
       name="f"
       xsi:type="File"
-      layout="${longdate} [${threadid:padding=8}] [${uppercase:${level:padding=-5}}] ${callsite}() ${message} ${exception:format=tostring}"
+      layout="${longdate} [${uppercase:${level:padding=-5}}] ${message} ${callsite}() ${exception:format=tostring}"
       fileName="${basedir}/logs/${date:format=yyyyMMdd}.log"
       encoding="UTF-8"
       archiveFileName="${basedir}/logs/archives/archive.{#}.log"
