--- a/src/MakePdf.Core.Tests/MakePdf.Core.Tests.csproj
+++ b/src/MakePdf.Core.Tests/MakePdf.Core.Tests.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Compile Include="Documents\OutputPdfTest.cs" />
     <Compile Include="Documents\WordTest.cs" />
+    <Compile Include="Extensions\StringTest.cs" />
     <Compile Include="MakePdfCoreTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SupportTest.cs" />
